css/main.css
@import url(./fonts.css);

body {
    margin: 0;
    padding: 0;
    font-family: 'ProximaNova-Regular';
    line-height: 1.42857143;
}
p {
    margin: 0;
    padding: 0;
}

ul {
    list-style-type:none;
    padding-left: 0;
    padding-bottom: 0;
    margin-top: 0px;
    margin-bottom: 10px;
}

h3 {
    font-size: 24px;
    color: #474B4F;
    font-weight: 400;
    text-transform: uppercase;
}

h5 {
    font-size: 14px;
    margin-top: 10px;
    margin-bottom: 10px;
}

h6 {
    font-size: 14px;
    font-weight: 400;
    margin-top: 10px;
    margin-bottom: 10px;
}

/* div {
    border: 1px dashed rgba(161, 159, 159, 0.596);
}  */

.wrapper {
    max-width: 1170px;
    margin: 0 auto;
    display: flex;
    justify-content: space-between;
    padding-left: 40px;
    padding-right: 40px;
}

.my-photo {
    border-radius: 50%;
    width:262px;
    position: relative;
    top:-135px;
}

.main-title {
    display: flex;
    align-items: center;
    justify-content: space-between;
    border-bottom: 1px solid #dcdcdc ;
}

.container {
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    justify-content:space-between;
    max-width: 780px;
}

.main-title>h1 {
    font-size: 14px;
    color: #474B4F;
    font-weight: normal;
    margin-top: 50px;
}
.btns {
    display: flex;
}

.btn {
    display: block;
    min-width: 157px;
    text-decoration: none;
    border-radius: 10px;
    box-shadow: 5px 5px 10px #54772a;
    padding: 4px;
    background-color: #86C232;
    color: #fff;
    text-align: center;
    font-size: 14px;
    margin: 50px 15px 15px 15px;
}
.btn:hover {
    background-color: #61892F;
}
.btn:active {
    background-color: #54772a;
}

.btn:last-child {
    margin:  50px 0px 15px 15px;
}
.nav {
    display: flex;
}
.nav-item {
    display: block;
    font-size: 16px;
    text-decoration: none;
    color:#222629;
    padding: 15px;
    
}

.nav-item:hover {
    color:#86C232;
    box-shadow: 5px 5px 10px #222629;
}

.active {
    color:#86C232;
    background-color: #222629;
    box-shadow: 5px 5px 10px #222629;
}
.container{
    border-top: 1px solid #dcdcdc  ;
    padding-top: 20px;
    padding-bottom: 80px;
}

.dark-theme {
    background-color: #222629;
    color: #fff;
}
.dark-theme span{
    color: #86C232;
}

.dark-theme h3 {
    font-size: 24px;
    color: #61892F;
    font-weight: 400;
    text-transform: uppercase;
}

.dark-theme .container{
    border-top: 1px solid #474B4F ;
    padding-top: 20px;
    padding-bottom: 80px;
}

.dark-theme a {
    color: #1472ff;
    text-decoration: none;
}

.intro {
    font-size: 42px;
    color: #86C232;
    margin-top: 75px;
    font-weight: 700;
}

.row  {
    display: flex;   
}

.item {
    margin-bottom: 20px;
}

.row .item:first-child{
    width: 66%;
}

.footer {
    padding-top: 80px;
}

@media (max-width: 395px) {
    .btns{
        flex-direction: column;
        align-items: baseline;       
    }
    .nav{
        flex-direction: column; 
    }

    .btn {
        margin-top: 15px;
    }

    .btn:last-child {
        margin-top: 15px;
    }
}

@media (max-width: 622px) {
    .nav{
        flex-direction: column; 
    }
    .main-title{
        flex-direction: column;
    }
    .intro{
        font-size: 22px;
    }
    .btn {
        margin-top: 15px;
    }

    .btn:last-child {
        margin-top: 15px;
    }

    .row {
        flex-direction: column;
    }
}

@media (max-width: 1071px) {
    .wrapper{
        flex-direction: column;
    }
    .content-title>h3{
        margin:0;
    }
}

@media  (max-width: 1119px) {
    .my-photo{
        display: none;
    }
}

